# MA_Force_Control

./: CMakeLists.txt  README.md  force_control_plugin.xml  package.xml
action/: EquilibriumPose.action
config/: force_control.yaml
include/force_control/: ActionPrimitive.h  AtomicTasks.h  ImpedanceParameterController.h  cartesian_impedance_controller.h  force_action_controller.h  operational_space_force_controller.h  test_controller.h
launch/: cartesian_impedance_controller.launch  hololens_test.launch  operational_space_force_controller.launch  test_controller.launch
launch/rviz/: task_planning.rviz
lists/: friction_parameters.txt
scripts/: hand_logger.py  plot.py
src/: ActionPrimitive.cpp  AtomicTasks.cpp  CartesianImpedanceController_helpers.cpp  ForceActionController_helpers.cpp  ImpedanceParameterController.cpp  callbacks.cpp  cartesian_impedance_controller.cpp  cartesian_impedance_controller_helpers.cpp  equilibrium_pose_server.cpp  force_action_controller.cpp  impedance_setter_node.cpp  operational_space_force_controller.cpp  scratch.cpp  test_controller.cpp
